# CEPS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmark/: README.md  process_results.py  run_benchmark.py
src/: .clang-format  .clang-tidy  CMakeLists.txt  Clausen.cpp  Clausen.h  CommonRefinement.cpp  CommonRefinement.h  CommonRefinement.ipp  ConeFlattening.cpp  ConeFlattening.h  ConePlacement.cpp  ConePlacement.h  Cutter.cpp  Cutter.h  DirectSum.h  DirectSum.ipp  FlipFormulas.cpp  FlipFormulas.h  GenerateCuts.cpp  GeometryUtils.cpp  GeometryUtils.h  IO.cpp  IO.h  IO.ipp  Layout.cpp  Layout.h  Logger.cpp  Logger.h  Optimizer.cpp  Optimizer.h  Parameterize.cpp  Tracing.cpp  Tracing.h  Triangulation.cpp  Triangulation.h  Utils.cpp  Utils.h  Utils.ipp  main.cpp
src/SphericalUniformization/: CMakeLists.txt  PartiallyDecoratedTriangulation.cpp  PartiallyDecoratedTriangulation.h  PetscWrapper.cpp  PetscWrapper.h  ResolveCompilerPaths.cmake  SphericalDemo.cpp  SphericalUniformization.cpp  SphericalUniformization.h  findPETSc.cmake
src/SphericalUniformization/polyscope/: SurfaceProjectiveSphericalParameterizationQuantity.cpp  SurfaceProjectiveSphericalParameterizationQuantity.h  SurfaceProjectiveSphericalParameterizationQuantity.ipp  bindata.h
src/polyscope/: SurfaceProjectiveParameterizationQuantity.cpp  SurfaceProjectiveParameterizationQuantity.h  SurfaceProjectiveParameterizationQuantity.ipp
src/tests/: CMakeLists.txt  CommonRefinementTests.h  ExampleTests.h  FlippingTests.h  NumericalNormalCoordinatesComputations.h  TracingTests.h  test.cpp  test_utils.h
